# z80-hardware-emulator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Google_tests/: CMakeLists.txt  OpCodeTest.cpp
libs/mcp23s17/: CMakeLists.txt  mcp23s17.cpp  mcp23s17.hpp
src/: bus.cpp  bus.hpp  config.hpp  cpu.cpp  cpu.hpp  log.cpp  log.hpp  mcycle.cpp  mcycle.hpp  opcode.cpp  opcode.hpp  registers.cpp  registers.hpp  special_registers.cpp  special_registers.hpp  z80emu.cpp
src/bus/: bus.cpp  bus.hpp  pigpio_bus.cpp  pigpio_bus.hpp  pigpio_bus_bulk.cpp  pigpio_bus_bulk.hpp
